--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ curse_id=0
 mod_version=0.0.0-SNAPSHOT
 
 mc_version=1.20.1
-forge_version=47.1.3
+neo_version=47.1.28
 
 mod_name=examplemod
 mod_group_id=com.lothrazar.examplemod
@@ -19,7 +19,7 @@ mod_license=SeeGithub
 mod_authors=Lothrazar
 mod_description=mod
 minecraft_version_range=[1.20.1,)
-forge_version_range=[47,)
+
 loader_version_range=[47,)
 mapping_channel=official
 minecraft_version=1.20.1
